deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: icoder
  labels: 
    first: app
spec: # Behaviour of the replicaset
  replicas: 3
  selector: 
    matchLabels: 
      app: web
  template:
    metadata: 
      labels: 
        app: web
    spec: # behaviour fo the pod
      containers: 
        - name: my-container
          image: icoder
          ports:
            - containerPort: 1000
