deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: vegetable-order-app
  labels: 
    first: app
spec: # Behaviour of the replicaset
  replicas: 3
  selector: 
    matchLabels: 
      app: web
  template:
    metadata: 
      labels: 
        app: web
    spec: # behaviour fo the pod
      containers: 
        - name: veg-container
          image: twinklepriya/vegetable-order-app:v1.0.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata: 
  name: my-service
spec:
  selector: 
    app: web
ports:
  - protocol: TCP
    port:  3000
    targetPort: 3001
type: ClusterIP
