http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: twinkle-httproutes
  namespace: twinkle-ns

spec:
  parentRefs:
    - name: twinkle-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/vegetable

      filters:
        - type: URLRewrite

          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /vegetable

      backendRefs:
        - name: my-service
          port: 3000
